# pyBumbleMesh

./: .gitignore  DESIGN.md  deploy.sh  init_blue.sh  logging_config.json  pyproject.toml  readme.md  requirements.txt  test_crypto_self.py
bluez_test/: replace_files.sh
bluez_test/tools/: mesh-cfgclient.c
bluez_test/tools/mesh/: cfgcli.c  config-model.h
bumble_mesh/: access.py  bearer.py  config_manager.py  crypto.py  logger.py  network.py  pb_adv.py  pb_remote.py  provisioning.py  stack.py  storage.py  transport.py  upper_transport.py
bumble_mesh/models/: config.py  generic_onoff.py  remote_provisioning.py
examples/: auto_provisioner.py  auto_test.py  device_simulator.py  exploit_off_by_one.py  exploit_remprv.py  interactive_provisioner.py  mesh_manager.py  mesh_node_sim.py  mesh_shell.py  remote_provisioner.py  send_beacon.py  send_hci_beacon.py  sniffer.py  test_raw_hci.py
skills/: pybumblemesh-bluez-compat.md
