[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyBumbleMesh"
version = "0.1.0"
description = "Bluetooth Mesh stack on top of Bumble"
dependencies = [
    "bumble",
    "cryptography"
]

[tool.setuptools.packages.find]
include = ["bumble_mesh*"]
